practicas/Entrega/src/sintactico/y.output
   0  $accept : programa $end

   1  programa : sentencias

   2  sentencias :
   3             | sentencias sentencia

   4  sentencia : "VAR" definicion
   5            | struct
   6            | funcion

   7  struct : "STRUCT" "IDENT" '{' definiciones '}' ';'

   8  definiciones : definicion
   9               | definiciones definicion

  10  definicion : "IDENT" ':' tipo ';'

  11  funcion : "IDENT" '(' parametros_ ')' ':' tipo '{' definiciones_funcion sentencias_locales '}'
  12          | "IDENT" '(' parametros_ ')' '{' definiciones_funcion sentencias_locales '}'

  13  definiciones_funcion :
  14                       | definiciones_funcion "VAR" definicion

  15  parametros_ : parametros
  16              |

  17  parametros : parametro
  18             | parametros ',' parametro

  19  parametro : "IDENT" ':' tipo

  20  tipo : "IDENT"
  21       | "INT"
  22       | "FLOAT"
  23       | "CHAR"
  24       | '[' "LITENT" ']' tipo

  25  sentencias_locales : sentencia_local
  26                     | sentencias_locales sentencia_local

  27  sentencia_local : expr '=' expr ';'
  28                  | "PRINT" expr ';'
  29                  | "READ" expr ';'
  30                  | "IF" '(' expr ')' '{' sentencias_locales '}'
  31                  | "IF" '(' expr ')' '{' sentencias_locales '}' "ELSE" '{' sentencias_locales '}'
  32                  | "WHILE" '(' expr ')' '{' sentencias_locales '}'
  33                  | "IDENT" '(' paso_parametros_ ')' ';'
  34                  | "RETURN" expr ';'
  35                  | "RETURN" ';'

  36  expr : "LITENT"
  37       | "LITREAL"
  38       | "LITCHAR"
  39       | "IDENT"
  40       | "CAST" '<' tipo '>' '(' expr ')'
  41       | expr '*' expr
  42       | expr '/' expr
  43       | expr '+' expr
  44       | expr '-' expr
  45       | expr '<' expr
  46       | expr '>' expr
  47       | expr "MAYOR_IGUAL" expr
  48       | expr "MENOR_IGUAL" expr
  49       | expr "IGUAL" expr
  50       | expr "DISTINTO" expr
  51       | expr "AND" expr
  52       | expr "OR" expr
  53       | '!' expr
  54       | '(' expr ')'
  55       | expr '.' expr
  56       | expr '[' expr ']'
  57       | "IDENT" '(' paso_parametros_ ')'

  58  paso_parametros_ : paso_parametros
  59                   |

  60  paso_parametros : expr
  61                  | paso_parametros ',' expr

state 0
	$accept : . programa $end  (0)
	sentencias : .  (2)

	.  reduce 2

	programa  goto 1
	sentencias  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : sentencias .  (1)
	sentencias : sentencias . sentencia  (3)

	"VAR"  shift 3
	"STRUCT"  shift 4
	"IDENT"  shift 5
	$end  reduce 1

	sentencia  goto 6
	struct  goto 7
	funcion  goto 8


state 3
	sentencia : "VAR" . definicion  (4)

	"IDENT"  shift 9
	.  error

	definicion  goto 10


state 4
	struct : "STRUCT" . "IDENT" '{' definiciones '}' ';'  (7)

	"IDENT"  shift 11
	.  error


state 5
	funcion : "IDENT" . '(' parametros_ ')' ':' tipo '{' definiciones_funcion sentencias_locales '}'  (11)
	funcion : "IDENT" . '(' parametros_ ')' '{' definiciones_funcion sentencias_locales '}'  (12)

	'('  shift 12
	.  error


state 6
	sentencias : sentencias sentencia .  (3)

	.  reduce 3


state 7
	sentencia : struct .  (5)

	.  reduce 5


state 8
	sentencia : funcion .  (6)

	.  reduce 6


state 9
	definicion : "IDENT" . ':' tipo ';'  (10)

	':'  shift 13
	.  error


state 10
	sentencia : "VAR" definicion .  (4)

	.  reduce 4


state 11
	struct : "STRUCT" "IDENT" . '{' definiciones '}' ';'  (7)

	'{'  shift 14
	.  error


state 12
	funcion : "IDENT" '(' . parametros_ ')' ':' tipo '{' definiciones_funcion sentencias_locales '}'  (11)
	funcion : "IDENT" '(' . parametros_ ')' '{' definiciones_funcion sentencias_locales '}'  (12)
	parametros_ : .  (16)

	"IDENT"  shift 15
	')'  reduce 16

	parametros_  goto 16
	parametros  goto 17
	parametro  goto 18


state 13
	definicion : "IDENT" ':' . tipo ';'  (10)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 24


state 14
	struct : "STRUCT" "IDENT" '{' . definiciones '}' ';'  (7)

	"IDENT"  shift 9
	.  error

	definicion  goto 25
	definiciones  goto 26


state 15
	parametro : "IDENT" . ':' tipo  (19)

	':'  shift 27
	.  error


state 16
	funcion : "IDENT" '(' parametros_ . ')' ':' tipo '{' definiciones_funcion sentencias_locales '}'  (11)
	funcion : "IDENT" '(' parametros_ . ')' '{' definiciones_funcion sentencias_locales '}'  (12)

	')'  shift 28
	.  error


state 17
	parametros_ : parametros .  (15)
	parametros : parametros . ',' parametro  (18)

	','  shift 29
	')'  reduce 15


state 18
	parametros : parametro .  (17)

	.  reduce 17


state 19
	tipo : '[' . "LITENT" ']' tipo  (24)

	"LITENT"  shift 30
	.  error


state 20
	tipo : "IDENT" .  (20)

	.  reduce 20


state 21
	tipo : "INT" .  (21)

	.  reduce 21


state 22
	tipo : "FLOAT" .  (22)

	.  reduce 22


state 23
	tipo : "CHAR" .  (23)

	.  reduce 23


state 24
	definicion : "IDENT" ':' tipo . ';'  (10)

	';'  shift 31
	.  error


state 25
	definiciones : definicion .  (8)

	.  reduce 8


state 26
	struct : "STRUCT" "IDENT" '{' definiciones . '}' ';'  (7)
	definiciones : definiciones . definicion  (9)

	"IDENT"  shift 9
	'}'  shift 32
	.  error

	definicion  goto 33


state 27
	parametro : "IDENT" ':' . tipo  (19)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 34


state 28
	funcion : "IDENT" '(' parametros_ ')' . ':' tipo '{' definiciones_funcion sentencias_locales '}'  (11)
	funcion : "IDENT" '(' parametros_ ')' . '{' definiciones_funcion sentencias_locales '}'  (12)

	'{'  shift 35
	':'  shift 36
	.  error


state 29
	parametros : parametros ',' . parametro  (18)

	"IDENT"  shift 15
	.  error

	parametro  goto 37


state 30
	tipo : '[' "LITENT" . ']' tipo  (24)

	']'  shift 38
	.  error


state 31
	definicion : "IDENT" ':' tipo ';' .  (10)

	.  reduce 10


state 32
	struct : "STRUCT" "IDENT" '{' definiciones '}' . ';'  (7)

	';'  shift 39
	.  error


state 33
	definiciones : definiciones definicion .  (9)

	.  reduce 9


state 34
	parametro : "IDENT" ':' tipo .  (19)

	.  reduce 19


state 35
	funcion : "IDENT" '(' parametros_ ')' '{' . definiciones_funcion sentencias_locales '}'  (12)
	definiciones_funcion : .  (13)

	.  reduce 13

	definiciones_funcion  goto 40


state 36
	funcion : "IDENT" '(' parametros_ ')' ':' . tipo '{' definiciones_funcion sentencias_locales '}'  (11)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 41


state 37
	parametros : parametros ',' parametro .  (18)

	.  reduce 18


state 38
	tipo : '[' "LITENT" ']' . tipo  (24)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 42


state 39
	struct : "STRUCT" "IDENT" '{' definiciones '}' ';' .  (7)

	.  reduce 7


state 40
	funcion : "IDENT" '(' parametros_ ')' '{' definiciones_funcion . sentencias_locales '}'  (12)
	definiciones_funcion : definiciones_funcion . "VAR" definicion  (14)

	'!'  shift 43
	'('  shift 44
	"VAR"  shift 45
	"IDENT"  shift 46
	"LITENT"  shift 47
	"PRINT"  shift 48
	"READ"  shift 49
	"IF"  shift 50
	"WHILE"  shift 51
	"RETURN"  shift 52
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	sentencias_locales  goto 56
	sentencia_local  goto 57
	expr  goto 58


state 41
	funcion : "IDENT" '(' parametros_ ')' ':' tipo . '{' definiciones_funcion sentencias_locales '}'  (11)

	'{'  shift 59
	.  error


state 42
	tipo : '[' "LITENT" ']' tipo .  (24)

	.  reduce 24


state 43
	expr : '!' . expr  (53)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 61


state 44
	expr : '(' . expr ')'  (54)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 62


state 45
	definiciones_funcion : definiciones_funcion "VAR" . definicion  (14)

	"IDENT"  shift 9
	.  error

	definicion  goto 63


state 46
	sentencia_local : "IDENT" . '(' paso_parametros_ ')' ';'  (33)
	expr : "IDENT" .  (39)
	expr : "IDENT" . '(' paso_parametros_ ')'  (57)

	'('  shift 64
	'+'  reduce 39
	'-'  reduce 39
	'*'  reduce 39
	'/'  reduce 39
	'<'  reduce 39
	'>'  reduce 39
	"MAYOR_IGUAL"  reduce 39
	"MENOR_IGUAL"  reduce 39
	"IGUAL"  reduce 39
	"DISTINTO"  reduce 39
	"AND"  reduce 39
	"OR"  reduce 39
	'.'  reduce 39
	'['  reduce 39
	'='  reduce 39


state 47
	expr : "LITENT" .  (36)

	.  reduce 36


state 48
	sentencia_local : "PRINT" . expr ';'  (28)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 65


state 49
	sentencia_local : "READ" . expr ';'  (29)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 66


state 50
	sentencia_local : "IF" . '(' expr ')' '{' sentencias_locales '}'  (30)
	sentencia_local : "IF" . '(' expr ')' '{' sentencias_locales '}' "ELSE" '{' sentencias_locales '}'  (31)

	'('  shift 67
	.  error


state 51
	sentencia_local : "WHILE" . '(' expr ')' '{' sentencias_locales '}'  (32)

	'('  shift 68
	.  error


state 52
	sentencia_local : "RETURN" . expr ';'  (34)
	sentencia_local : "RETURN" . ';'  (35)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	';'  shift 69
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 70


state 53
	expr : "LITREAL" .  (37)

	.  reduce 37


state 54
	expr : "LITCHAR" .  (38)

	.  reduce 38


state 55
	expr : "CAST" . '<' tipo '>' '(' expr ')'  (40)

	'<'  shift 71
	.  error


state 56
	funcion : "IDENT" '(' parametros_ ')' '{' definiciones_funcion sentencias_locales . '}'  (12)
	sentencias_locales : sentencias_locales . sentencia_local  (26)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 46
	'}'  shift 72
	"LITENT"  shift 47
	"PRINT"  shift 48
	"READ"  shift 49
	"IF"  shift 50
	"WHILE"  shift 51
	"RETURN"  shift 52
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	sentencia_local  goto 73
	expr  goto 58


state 57
	sentencias_locales : sentencia_local .  (25)

	.  reduce 25


state 58
	sentencia_local : expr . '=' expr ';'  (27)
	expr : expr . '*' expr  (41)
	expr : expr . '/' expr  (42)
	expr : expr . '+' expr  (43)
	expr : expr . '-' expr  (44)
	expr : expr . '<' expr  (45)
	expr : expr . '>' expr  (46)
	expr : expr . "MAYOR_IGUAL" expr  (47)
	expr : expr . "MENOR_IGUAL" expr  (48)
	expr : expr . "IGUAL" expr  (49)
	expr : expr . "DISTINTO" expr  (50)
	expr : expr . "AND" expr  (51)
	expr : expr . "OR" expr  (52)
	expr : expr . '.' expr  (55)
	expr : expr . '[' expr ']'  (56)

	'+'  shift 74
	'-'  shift 75
	'*'  shift 76
	'/'  shift 77
	'<'  shift 78
	'>'  shift 79
	"MAYOR_IGUAL"  shift 80
	"MENOR_IGUAL"  shift 81
	"IGUAL"  shift 82
	"DISTINTO"  shift 83
	"AND"  shift 84
	"OR"  shift 85
	'.'  shift 86
	'['  shift 87
	'='  shift 88
	.  error


state 59
	funcion : "IDENT" '(' parametros_ ')' ':' tipo '{' . definiciones_funcion sentencias_locales '}'  (11)
	definiciones_funcion : .  (13)

	.  reduce 13

	definiciones_funcion  goto 89


state 60
	expr : "IDENT" .  (39)
	expr : "IDENT" . '(' paso_parametros_ ')'  (57)

	'('  shift 90
	'+'  reduce 39
	'-'  reduce 39
	'*'  reduce 39
	'/'  reduce 39
	'<'  reduce 39
	'>'  reduce 39
	"MAYOR_IGUAL"  reduce 39
	"MENOR_IGUAL"  reduce 39
	"IGUAL"  reduce 39
	"DISTINTO"  reduce 39
	"AND"  reduce 39
	"OR"  reduce 39
	'.'  reduce 39
	'['  reduce 39
	']'  reduce 39
	')'  reduce 39
	';'  reduce 39
	','  reduce 39
	'='  reduce 39


state 61
	expr : expr . '*' expr  (41)
	expr : expr . '/' expr  (42)
	expr : expr . '+' expr  (43)
	expr : expr . '-' expr  (44)
	expr : expr . '<' expr  (45)
	expr : expr . '>' expr  (46)
	expr : expr . "MAYOR_IGUAL" expr  (47)
	expr : expr . "MENOR_IGUAL" expr  (48)
	expr : expr . "IGUAL" expr  (49)
	expr : expr . "DISTINTO" expr  (50)
	expr : expr . "AND" expr  (51)
	expr : expr . "OR" expr  (52)
	expr : '!' expr .  (53)
	expr : expr . '.' expr  (55)
	expr : expr . '[' expr ']'  (56)

	'.'  shift 86
	'['  shift 87
	'+'  reduce 53
	'-'  reduce 53
	'*'  reduce 53
	'/'  reduce 53
	'<'  reduce 53
	'>'  reduce 53
	"MAYOR_IGUAL"  reduce 53
	"MENOR_IGUAL"  reduce 53
	"IGUAL"  reduce 53
	"DISTINTO"  reduce 53
	"AND"  reduce 53
	"OR"  reduce 53
	']'  reduce 53
	')'  reduce 53
	';'  reduce 53
	','  reduce 53
	'='  reduce 53


state 62
	expr : expr . '*' expr  (41)
	expr : expr . '/' expr  (42)
	expr : expr . '+' expr  (43)
	expr : expr . '-' expr  (44)
	expr : expr . '<' expr  (45)
	expr : expr . '>' expr  (46)
	expr : expr . "MAYOR_IGUAL" expr  (47)
	expr : expr . "MENOR_IGUAL" expr  (48)
	expr : expr . "IGUAL" expr  (49)
	expr : expr . "DISTINTO" expr  (50)
	expr : expr . "AND" expr  (51)
	expr : expr . "OR" expr  (52)
	expr : '(' expr . ')'  (54)
	expr : expr . '.' expr  (55)
	expr : expr . '[' expr ']'  (56)

	'+'  shift 74
	'-'  shift 75
	'*'  shift 76
	'/'  shift 77
	'<'  shift 78
	'>'  shift 79
	"MAYOR_IGUAL"  shift 80
	"MENOR_IGUAL"  shift 81
	"IGUAL"  shift 82
	"DISTINTO"  shift 83
	"AND"  shift 84
	"OR"  shift 85
	'.'  shift 86
	'['  shift 87
	')'  shift 91
	.  error


state 63
	definiciones_funcion : definiciones_funcion "VAR" definicion .  (14)

	.  reduce 14


state 64
	sentencia_local : "IDENT" '(' . paso_parametros_ ')' ';'  (33)
	expr : "IDENT" '(' . paso_parametros_ ')'  (57)
	paso_parametros_ : .  (59)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	')'  reduce 59

	expr  goto 92
	paso_parametros_  goto 93
	paso_parametros  goto 94


state 65
	sentencia_local : "PRINT" expr . ';'  (28)
	expr : expr . '*' expr  (41)
	expr : expr . '/' expr  (42)
	expr : expr . '+' expr  (43)
	expr : expr . '-' expr  (44)
	expr : expr . '<' expr  (45)
	expr : expr . '>' expr  (46)
	expr : expr . "MAYOR_IGUAL" expr  (47)
	expr : expr . "MENOR_IGUAL" expr  (48)
	expr : expr . "IGUAL" expr  (49)
	expr : expr . "DISTINTO" expr  (50)
	expr : expr . "AND" expr  (51)
	expr : expr . "OR" expr  (52)
	expr : expr . '.' expr  (55)
	expr : expr . '[' expr ']'  (56)

	'+'  shift 74
	'-'  shift 75
	'*'  shift 76
	'/'  shift 77
	'<'  shift 78
	'>'  shift 79
	"MAYOR_IGUAL"  shift 80
	"MENOR_IGUAL"  shift 81
	"IGUAL"  shift 82
	"DISTINTO"  shift 83
	"AND"  shift 84
	"OR"  shift 85
	'.'  shift 86
	'['  shift 87
	';'  shift 95
	.  error


state 66
	sentencia_local : "READ" expr . ';'  (29)
	expr : expr . '*' expr  (41)
	expr : expr . '/' expr  (42)
	expr : expr . '+' expr  (43)
	expr : expr . '-' expr  (44)
	expr : expr . '<' expr  (45)
	expr : expr . '>' expr  (46)
	expr : expr . "MAYOR_IGUAL" expr  (47)
	expr : expr . "MENOR_IGUAL" expr  (48)
	expr : expr . "IGUAL" expr  (49)
	expr : expr . "DISTINTO" expr  (50)
	expr : expr . "AND" expr  (51)
	expr : expr . "OR" expr  (52)
	expr : expr . '.' expr  (55)
	expr : expr . '[' expr ']'  (56)

	'+'  shift 74
	'-'  shift 75
	'*'  shift 76
	'/'  shift 77
	'<'  shift 78
	'>'  shift 79
	"MAYOR_IGUAL"  shift 80
	"MENOR_IGUAL"  shift 81
	"IGUAL"  shift 82
	"DISTINTO"  shift 83
	"AND"  shift 84
	"OR"  shift 85
	'.'  shift 86
	'['  shift 87
	';'  shift 96
	.  error


state 67
	sentencia_local : "IF" '(' . expr ')' '{' sentencias_locales '}'  (30)
	sentencia_local : "IF" '(' . expr ')' '{' sentencias_locales '}' "ELSE" '{' sentencias_locales '}'  (31)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 97


state 68
	sentencia_local : "WHILE" '(' . expr ')' '{' sentencias_locales '}'  (32)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 98


state 69
	sentencia_local : "RETURN" ';' .  (35)

	.  reduce 35


state 70
	sentencia_local : "RETURN" expr . ';'  (34)
	expr : expr . '*' expr  (41)
	expr : expr . '/' expr  (42)
	expr : expr . '+' expr  (43)
	expr : expr . '-' expr  (44)
	expr : expr . '<' expr  (45)
	expr : expr . '>' expr  (46)
	expr : expr . "MAYOR_IGUAL" expr  (47)
	expr : expr . "MENOR_IGUAL" expr  (48)
	expr : expr . "IGUAL" expr  (49)
	expr : expr . "DISTINTO" expr  (50)
	expr : expr . "AND" expr  (51)
	expr : expr . "OR" expr  (52)
	expr : expr . '.' expr  (55)
	expr : expr . '[' expr ']'  (56)

	'+'  shift 74
	'-'  shift 75
	'*'  shift 76
	'/'  shift 77
	'<'  shift 78
	'>'  shift 79
	"MAYOR_IGUAL"  shift 80
	"MENOR_IGUAL"  shift 81
	"IGUAL"  shift 82
	"DISTINTO"  shift 83
	"AND"  shift 84
	"OR"  shift 85
	'.'  shift 86
	'['  shift 87
	';'  shift 99
	.  error


state 71
	expr : "CAST" '<' . tipo '>' '(' expr ')'  (40)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"FLOAT"  shift 22
	"CHAR"  shift 23
	.  error

	tipo  goto 100


state 72
	funcion : "IDENT" '(' parametros_ ')' '{' definiciones_funcion sentencias_locales '}' .  (12)

	.  reduce 12


state 73
	sentencias_locales : sentencias_locales sentencia_local .  (26)

	.  reduce 26


state 74
	expr : expr '+' . expr  (43)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 101


state 75
	expr : expr '-' . expr  (44)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 102


state 76
	expr : expr '*' . expr  (41)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 103


state 77
	expr : expr '/' . expr  (42)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 104


state 78
	expr : expr '<' . expr  (45)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 105


state 79
	expr : expr '>' . expr  (46)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 106


state 80
	expr : expr "MAYOR_IGUAL" . expr  (47)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 107


state 81
	expr : expr "MENOR_IGUAL" . expr  (48)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 108


state 82
	expr : expr "IGUAL" . expr  (49)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 109


state 83
	expr : expr "DISTINTO" . expr  (50)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 110


state 84
	expr : expr "AND" . expr  (51)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 111


state 85
	expr : expr "OR" . expr  (52)

	'!'  shift 43
	'('  shift 44
	"IDENT"  shift 60
	"LITENT"  shift 47
	"LITREAL"  shift 53
	"LITCHAR"  shift 54
	"CAST"  shift 55
	.  error

	expr  goto 112


state 86
	expr : expr '.' . expr  (55)
